[package]
name = "flapper"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = "0.7.0"
embassy-time = "0.4.0"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16.0", features = ["println", "esp32", "panic-handler"] }
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.8.1" , features = ["esp32"] }
esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.14.1", features = ["esp32", "wifi", "smoltcp"] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
smoltcp = { version = "0.12.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
embedded-io         = { version = "0.6.1", default-features = false }
