[package]
name = "flapper"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16.0", features = ["println", "esp32", "panic-handler"] }
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.8.1" , features = ["esp32"] }
esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.14.1", features = ["esp32", "wifi", "smoltcp"] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
smoltcp = { version = "0.12.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
embedded-io         = { version = "0.6.1", default-features = false }
embedded-io-async   = "0.6.1"
embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
edge-dhcp           = { version = "0.5.0" }
edge-nal            = { version = "0.5.0" }
edge-nal-embassy    = { version = "0.5.0" }
log                 = "0.4.27"
static_cell         = { version = "2.1.0" }
embassy-futures = "0.1.1"
embedded-storage = "0.3.1"
esp-storage = { version = "0.6.0", features = ["esp32"] }

[profile.dev]
opt-level = 3
